2005-03-30 Braden McDaniel  <braden@endoframe.com>

	* doc/Makefile.am:  Updated dependency list.

2005-03-30 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node.cpp:  Doc-comment improvements.

2005-03-28 Braden McDaniel  <braden@endoframe.com>

	Removed to_inline member function from
	openvrml::vrml97_node::inline_node.

	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h

2005-03-28 Braden McDaniel  <braden@endoframe.com>

	Added swap member function to openvrml::image along with a
	specialization of std::swap.

	* src/libopenvrml/openvrml/basetypes.cpp
	* src/libopenvrml/openvrml/basetypes.h

2005-03-25 Braden McDaniel  <braden@endoframe.com>

	* examples/sdl_viewer.cpp:  Code cleanup.

2005-03-22 Braden McDaniel  <braden@endoframe.com>

	* examples/sdl_viewer.cpp:  Removed lingering references to
	lookat.

2005-03-22 Braden McDaniel  <braden@endoframe.com>

	* README:  Removed references to lookat.  Updated "configure
	options" and "Significant preprocessor symbols" sections to
	reflect changes in the I/O subsystem and image decoders.

2005-03-21 Braden McDaniel  <braden@endoframe.com>

	Moved lookat to examples/sdl-viewer.  It is no longer an
	installed program.

	* Makefile.am:  Removed reference to lookat.xpm.
	* configure.ac:  Changed "--disable-lookat" option to
	"--disable-examples".
	* lookat.xpm:  Removed file.
	* openvrml.spec.in:  No longer emit lookat package.
	* examples/Makefile.am:  Added file.
	* examples/sdl_viewer.cpp:  Added file.
	* src/Makefile.am:  Removed reference to lookat subdirectory.
	* src/lookat/Makefile.am:  Removed file.
	* src/lookat/lookat.cpp:  Removed file.

2005-03-21 Braden McDaniel  <braden@endoframe.com>

	Removed file left over from GLUT-based lookat.

	* src/lookat/glutint.h:  Removed file.

2005-03-21 Braden McDaniel  <braden@endoframe.com>

	Asynchronously--and progressively--load PNG and JPEG textures.